[Feature] mod_selectLink: Remove dummy text box used to read hint input - This required using keypress instead of keydown for binding the 'spacePlusKey' event - mod_keyboardLib and mod_context were modified to prevent keyboard shortcuts from triggering when hints are visible - [Fix] mod_keyboardLib: removed unneeded parameter `dependsOnlyOnContext` mistakenly added to a call to suppressPropagationIfHandling()

--- a/styles/scss/units.scss
+++ b/styles/scss/units.scss
@@ -44,15 +44,6 @@ Also, hence the generous use of !important property here.
 }
 
 /* ****** 'Select Link' module styles ***** */
-input.UnitsProj-dummyHintInput {
-  opacity: 0 !important;
-  width: 0 !important;
-  overflow: hidden !important;
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-  pointer-events: none !important;
-}
 
 /* class for all hint labels */
 .UnitsProj-hintLabel {
